--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -55,7 +55,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ISAR</title>
+    <title>ISAR Employee login</title>
     <meta name="google-site-verification" content="hodCyZAbi2kRjSq-CSuirGFwHeF1LPTIjyAn6MIGsgM" />
   </head>
   <body>
